# euler-rs

./: Cargo.toml
benches/: factors.rs
proptest-regressions/: factors.txt
src/: best.rs  check.rs  decimal.rs  factors.rs  fibs.rs  lib.rs  main.rs  partitions.rs  poker.rs  primes.rs  runner.rs  solutions.rs  windows.rs
src/solutions/: mod.rs  p001_010.rs  p008_series_product.rs  p011_grid_product.rs  p012_triangle_divisors.rs  p013_large_sum.rs  p014_collatz.rs  p015_lattice_paths.rs  p050_prime_sum.rs  p051_digit_replacement.rs  p054_poker.rs  p076_sum_partition.rs  p078_coin_partition.rs  p081_path_sum.rs  p084_eigen.r  p084_monopoly.rs  p085_rectangles.rs  p087_prime_power_triples.rs  p089_roman.rs  p092_square_digit_chains.rs  p093_arithmetic.rs  p097_non_mersenne.rs  p099_base_exp.rs  p107_network.rs  p127_abc_hits.rs  p206_concealed_square.rs  p357_prime_generating_ints.rs  p719_number_splitting.rs  p751_concatenation.rs
