[package]
name = "euler"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "factors"
harness = false

[dependencies]
fixedbitset = "0.4.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
memoize = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.14"
owo-colors = "3.2.0"
primal = "0.2"
priority-queue = "1.2.1"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"
