[package]
name = "euler"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "factors"
harness = false

[dependencies]
automod = "1.0.2"
fixedbitset = "0.4.1"
gcd = "2.1.0"
integer-sqrt = "0.1.5"
itertools = "0.10.3"
lazy_static = "1.4.0"
linkme = "0.2.10"
memoize = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.14"
owo-colors = "3.2.0"
paste = "1.0.6"
primal = "0.3.0"
priority-queue = "1.2.1"
rand = "0.8.5"
rayon = "1.5.1"
tempfile = "3.3.0"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"
